[metadata]
name = koji_wrapper
author = Jason Guiditta
author-email = jason.guiditta@gmail.com
summary = Helper library to supplement Koji API
description-file =
    README.rst
    HISTORY.rst
home-page = https://github.com/release-depot/koji_wrapper
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords =
    koji_wrapper

[files]
packages =
    koji_wrapper

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
addopts = tests

