[metadata]
name = koji_wrapper
author = Jason Guiditta
author_email = jason.guiditta@gmail.com
description = """
              Helper library to work with areas of koji that are
              not well supported in that project's api.
              """
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
url = https://github.com/release-depot/koji_wrapper
project_urls =
    Bug Tracker = https://github.com/release-depot/koji_wrapper/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
keywords =
    koji_wrapper

[options]
package_dir =
    = .
packages = find:

[options.extras_require]
test =
    flake8
    pytest
    pytest-cov
    pytest-datadir
    tox

docs =
    sphinx==4.1.2
    sphinx-autobuild==2021.3.14
    sphinx-rtd-theme==0.5.2

dist =
    build
    setuptools_scm
    twine

[flake8]
exclude = docs
